fix 25 guia 3 extra2 guia 5

--- a/3-guia/ejercicios-3/ej-25-3.tex
+++ b/3-guia/ejercicios-3/ej-25-3.tex
@@ -155,9 +155,10 @@ $$
   ba-dum-tsss
 }
 
-\begin{aportes}
+\begin{aportes}[4]
   \item \aporte{https://github.com/Nunezca}{Nunezca \github}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
+  \item \aporte{https://github.com/sigfripro}{sigfripro \github}
 \end{aportes}
 
