--- a/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-2-5.tex
@@ -3,12 +3,18 @@
   $(a^{97} - 36 : 135)$
 \end{enunciado}
 
-Como $135 = 3^3 \cdot 5$, los posibles valores sin tener en cuenta la restricción que puede tomar el MCD serían:
+En el enunciado hay 2 cosas:
+$$
+  \textit{Lo que tengo que encontrar:} (a^{97} - 36 : 135)
+  \ytext
+  \textit{Restricción de los valores que puede tomar $a$:} (a^{197} - 26 : 15) = 1
+$$
+Como $135 = 3^3 \cdot 5$, los \ul{posibles valores sin tener en cuenta la restricción} que puede tomar el MCD serían:
 $$
   \llamada1 \text{MCD} \en \set{1, 3, 5, 9, 15, 27, 45, 135}
 $$.
 
-Por otro lado tengo que:
+Por otro lado laburando la restricción tengo que:
 $$
   15 = 3 \cdot 5 \ytext (a^{197} - 26 : 15) = 1,
 $$
@@ -65,8 +71,14 @@ $$
     }
   \end{array}
 $$
+
 \bigskip
-\textit{Divisibilidad por 3. ¿Es la expresión $a^{97} - 36$ divisible por 3 para alguno de los valores de $a$ permitidos?}:
+
+\textit{Divisibilidad por 3:}
+\parrafoDestacado{
+  \it    ¿Es la expresión $a^{97} - 36$ divisible por 3 para alguno de los valores de $a$ permitidos?
+}
+
 $$
   \congruencia{a^{97} - 36 }{0}{3}
   \sii
@@ -85,9 +97,15 @@ $$
   }
 $$
 
-Se concluye que la expresión $a^{97} - 36$ es divisible por 3 para alguno de los valores de $a$ permitidos.\par \bigskip
+Se concluye que la expresión $a^{97} - 36$ es divisible por 3 para alguno de los valores de $a$ permitidos.
 
-\textit{Divisibilidad por 5. ¿Es la expresión $a^{97} - 36$ divisible por 5 para alguno de los valores de $a$ permitidos?}:
+\bigskip
+
+\textit{Divisibilidad por 5:}
+\parrafoDestacado{
+  \it
+  ¿Es la expresión $a^{97} - 36$ divisible por 5 para alguno de los valores de $a$ permitidos?
+}
 $$
   \congruencia{a^{97} - 36 }{0}{5}
   \sii
@@ -104,13 +122,18 @@ $$
 Se concluye que la expresión $a^{97} - 36$ \ul{no es divisible por 5 para los valores de $a$ permitidos}.
 Esto reduce la cantidad de \textit{posibles} MCD a:
 $$
-  \text{MCD} \en \set{1,3,9,27}
+  \llamada1 \text{MCD} \en \set{1,3,9,27}
 $$
 
-\textit{\underline{Divisibilidad por 9}}.
-
 Teniendo en cuenta que los posibles MCD, son todos potencias de 3 y que $\blue{\congruencia{a}{0}{3}}$
-\textit{¿Es la expresión $a^{97} - 36$ divisible por 9 para alguno de los valores de $a$ permitidos?}:
+
+\bigskip
+
+\textit{Divisibilidad por 9:}
+\parrafoDestacado{
+  \it
+  ¿Es la expresión $a^{97} - 36$ divisible por 9 para alguno de los valores de $a$ permitidos?
+}
 $$
   \congruencia{a^{97} - 36 }{0}{9}
   \Sii{$\blue{\congruencia{a}{0}{3}}$}[$\Rightarrow a = \blue{3k}$]
@@ -119,15 +142,18 @@ $$
   \congruencia{0}{0}{9}
 $$
 
-Se concluye que la expresión $a^{97} - 36$ es divisible por 9 para los a que cumplen $\congruencia{a}{0}{3}$.
+Se concluye que la expresión $a^{97} - 36$ es divisible por 9 para los $a$ que cumplen $\congruencia{a}{0}{3}$.
 De esa manera \ul{destronando al 3 como posible MCD}.
+
+Teniendo en cuenta que hasta el momento que el 9 es el MCD.
 
 \bigskip
 
-\textit{\underline{Divisibilidad por 27}.}
-
-Teniendo en cuenta que hasta el momento que el 9 es el MCD.
-\textit{¿Es la expresión $a^{97} - 36$ divisible por 27 para alguno de los valores de $a$ permitidos?}:
+\textit{Divisibilidad por 27:}
+\parrafoDestacado{
+  \it
+  ¿Es la expresión $a^{97} - 36$ divisible por 27 para alguno de los valores de $a$ permitidos?
+}
 $$
   \congruencia{a^{97} - 36}{0}{27}
   \sii
@@ -145,9 +171,12 @@ Se concluye que la expresión $a^{97} - 36$ no es divisible por 27 para ninguno 
 
 \bigskip
 
-Hasta el momento obtuvimos que $\set{9}$ es el único MCD posible.
+Se redujieron los potenciales MCD a:
+$$
+  \llamada1 \text{MCD} \en \set{1,9}
+$$
 
-Falta analizar el caso del MCD = 1:
+Falta analizar el caso del MCD $ = 1$:
 
 Encuentro que si:
 $$
