fix ej extra 1 guia 3

--- a/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
@@ -31,7 +31,7 @@ $$
 $$
 Entonces un $Y$ \ul{no puede tener} los elementos 1, 2 y 3 porque \textit{rompería la relación}. Por otro lado $Y$ \ul{debe tener}
 los elementos en $\set{n \en \naturales : n \geq 9}$, de manera de \textit{cancelar} todos esos valores de $X$, de
-forma que $X \relacion Y \subseteq \set{4,5,6,7,8}$ y no tenga valores superiores a 8.
+forma que $X \triangle Y \subseteq \set{4,5,6,7,8}$ y no tenga valores superiores a 8.
 
 Con esta idea armo unos conjuntos $Z_i$
 $$
@@ -88,4 +88,5 @@ En palabras:
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
 \end{aportes}
