remaster ej 9 guia 4

--- a/2-guia/ejercicios-2/ej-9-2.tex
+++ b/2-guia/ejercicios-2/ej-9-2.tex
@@ -9,7 +9,7 @@
   \end{enumerate}
 \end{enunciado}
 
-\begin{enumerate}[label=\roman*)]
+\begin{enumerate}[label=\purple{\roman*)}]
 
   \item Sea $(a_n)_{n \en \naturales }$ una sucesión de números reales. Sea $n \en \naturales $ y
         \begin{align*}
