--- a/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
+++ b/3-guia/ejercicios-3-extra/ej-extra-1-3.tex
@@ -9,7 +9,7 @@
 
 Recordando que:
 
-El conjunto $\partes{\naturales}$ es un conjunto que tiene todos los subconjuntos que me puedo formar con los
+El conjunto $\partes(\naturales)$ es un conjunto que tiene todos los subconjuntos que me puedo formar con los
 números naturales. El cardinal del conjunto $\partes(\naturales)$:
 $$
   \#\partes(\naturales) = 2^{\#\naturales}.
