add extra 25 guia 4

--- a/4-guia/ejercicios-4-extra/ej-extra-22-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-22-4.tex
@@ -1,5 +1,4 @@
-\begin{enunciado}{\ejExtra}
-  \fechaEjercicio{parcial 1er cuatrimestre 2025}
+\begin{enunciado}{\ejExtra[1er cuatrimestre 2025]} \fechaEjercicio{1er cuatrimestre 2025}
 
   Hallar el menor $n \en \naturales$ tal que $(11n^2 : 2^2 \cdot 3^4 \cdot 5 \cdot 11) = 99$ y
   que tenga exactamente 12 divisores positivos.
