--- a/4-guia/ejercicios-4-extra/ej-extra-23-4.tex
+++ b/4-guia/ejercicios-4-extra/ej-extra-23-4.tex
@@ -1,4 +1,4 @@
-\begin{enunciado}{\ejExtra}\fechaEjercicio{(7/10/25) primer parcial}
+\begin{enunciado}{\ejExtra[(7/10/25) primer parcial]}\fechaEjercicio{(7/10/25) primer parcial}
   \begin{center}
     Probar que para todo $n \en \naturales$ vale que $36 \divideA 19^n -18n^2 - 1$.
   \end{center}
