--- a/4-guia/ejercicios-4/ej-4-4.tex
+++ b/4-guia/ejercicios-4/ej-4-4.tex
@@ -32,7 +32,10 @@ $$
 
 La proposición $p(1)$ es verdadera.
 
+\bigskip
+
 \textit{Paso inductivo: }
+
 Asumo que para algún valor de $\blue{k} \en \naturales$ que:
 $$
   p(\blue{k}): \ob{
