fix copy paste extra 8 guia 1

--- a/1-guia/ejercicios-1-extra/ej-extra-8-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-8-1.tex
@@ -92,9 +92,9 @@
         ¿Cuánto posibles valores del conjunto del codominio $\set{0, \dots, 100}$ hay que cumplan que su módulo 3 es 2?
         $$
           0 \leq 3k+2 \leq 100
-          \sii
-          -\frac{2}{3} \leq 3k+2 \leq \frac{98}{3}
-          \sii
+          \sisolosi
+          -\frac{2}{3} \leq k \leq \frac{98}{3}
+          \sisolosi
           k \en \set{0, \dots, 32}
         $$
         donde $\#\set{0, \dots, 32} = \blue{33}$.
