fix ej 23 guia 4

--- a/4-guia/ejercicios-4/ej-23-4.tex
+++ b/4-guia/ejercicios-4/ej-23-4.tex
@@ -169,7 +169,7 @@
             4a + 4 \divideA a^2 + 11a + 14 \\
             4a + 4 \divideA 4a + 4
           }
-          \Sii{\red{!}}
+          \Entonces{\red{!}}
           \llave{l}{
             4a + 4 \divideA 16 \\
             4a + 4 \divideA 4a + 4
@@ -177,26 +177,28 @@
         $$
         Las cuentas del \red{!} te las dejo a vos.
 
-        $4a+4$ tiene que dividir a 16, onda $\frac{16}{4a + a} \en \enteros$ por lo tanto necesitamos:
+        $4a+4$ tiene que dividir a 16, onda $\frac{16}{4a + 4} \en \enteros$ por lo tanto necesitamos:
         $$
-          4a + a \en \set{\pm1,\pm2,\pm4,\pm8,\pm16}.
+          4a + 4 \en \set{\pm1,\pm2,\pm4,\pm8,\pm16}.
         $$
         Teniendo en cuenta que $4a + 4 \en \enteros$ y también que $a \en \enteros$, quedan como únicos posibles valores:
         $$
           \begin{array}{rcc}
-            4 \cdot \magenta{(-5)} + 4 & = & \blue{-16} \\
-            4 \cdot \magenta{(-3)} + 4 & = & \blue{-8}  \\
-            4 \cdot \magenta{(-2)} + 4 & = & \blue{-4}  \\
-            4 \cdot \magenta{0} + 4    & = & \blue{4}   \\
-            4 \cdot \magenta{1} + 4    & = & \blue{8}   \\
-            4 \cdot \magenta{3} + 4    & = & \blue{16}
+            4 \cdot \magenta{(-5)} + 4 & = & \blue{-16}           \\
+            4 \cdot \magenta{(-3)} + 4 & = & \blue{-8}  ~~ \skull \\
+            4 \cdot \magenta{(-2)} + 4 & = & \blue{-4}            \\
+            4 \cdot \magenta{0} + 4    & = & \blue{4}   ~~ \skull \\
+            4 \cdot \magenta{1} + 4    & = & \blue{8}   ~~ \skull \\
+            4 \cdot \magenta{3} + 4    & = & \blue{16} ~~ \skull
           \end{array}
         $$
-        reemplazando esos valores de $a$ en $\llamada1$ se obtiene que  $ \llamada1 \en \enteros$.
+        reemplazando esos valores de $\magenta{a}$ en $\llamada1$ se obtiene que se comprueba para cuales
+        valores funciona que$\llamada1 \en \enteros$.
 \end{enumerate}
 
-\begin{aportes}
+\begin{aportes}[4]
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/a18delsol}{Juan Iglesias \github}
   \item \aporte{https://github.com/MPoncini}{M Poncini \github}
+  \item \aporte{https://github.com/ivdou}{Ivan Doumerc \github}
 \end{aportes}
