--- a/4-guia/ejercicios-4/ej-2-4.tex
+++ b/4-guia/ejercicios-4/ej-2-4.tex
@@ -92,8 +92,10 @@
         $$
           \blue{d} = 2n + 1 \en \set{\pm1, \pm3, \pm7, \pm21}
         $$
-        Pero ahora hay que probar para cuáles valores de $n$, obtengo alguno de esos valores $\blue{d}$,
-        pero me da pajilla \rosa{\faIcon[regular]{grimace}}.
+        Pero ahora hay que probar para cuáles valores de $n$, obtengo alguno de esos valores $\blue{d}$:
+        $$
+          n \en \set{1,3, 10}
+        $$
 
   \item A veces se ve y a veces no, pero:
         $$
@@ -112,4 +114,5 @@
 
 \begin{aportes}
   \item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{https://github.com/ivdou}{Ivan Doumerc \github}
 \end{aportes}
