--- a/5-guia/ejercicios-5/ej-17-5.tex
+++ b/5-guia/ejercicios-5/ej-17-5.tex
@@ -98,7 +98,7 @@
           \Sii{\red{!!}}
           \congruencia{2a^7 + 5a - 7 a^3}{0}{35}
         $$
-        Quizás conviene usar un sistema \textit{equivalente}, con divisored primos que nos permitan
+        Quizás conviene usar un sistema \textit{equivalente}, con divisores primos que nos permitan
         usar el PTF:
         $$
           \congruencia{2a^7 + 5a - 7 a^3}{0}{35}
