--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -160,47 +160,52 @@
             =0
           \end{array}
         $$
+        Donde esos \magenta{signos} dependen de la paridad de $\frac{n}{2}$, pero bueh, termina dando 0 como sea.
+
+        \bigskip
 
         \textit{Caso con $n$ par:}
+
+        Medio galerazo, medio del Triángulo de Pascal y del apunte teórico, copiar pegar, sale esta forma
+        recursiva del \textit{número combinatorio}:
+        $$
+          \binom{n}{k} =
+          \binom{n-1}{k-1} + \binom{n-1}{k} ~~ \llamada1
+        $$
+        Acomodo índices para que el número combinatorio esté bien definido, abro la suma y \textit{aparece una serie telescópica}:
+        {\small
         $$
           \begin{array}{rcl}
             \sumatoria{k = 0}{n} (-1)^k \binom{n}{k}
-             & =                      &
-            (-1)^0  \binom{n}{0} +
-            (-1)^1  \binom{n}{1} +
-            \cdots +
-            (-1)^{\frac{n}{2}} \binom{n}{\frac{n}{2}} +
-            \cdots +
-            (-1)^{(n-1)} \binom{n}{n-1} +
-            (-1)^n  \binom{n}{n}        \\
-             & \igual{\red{!}}        &
-            \binom{n}{0} -
-            \binom{n}{1} +
-            \cdots +
-            \binom{n}{\frac{n}{2}} -
-            \cdots -
-            \binom{n}{n-1} +
-            \binom{n}{n}                \\
-             & \igual{\red{!!}}[sug.] &
-            \binom{n}{0} -
-            \binom{n}{1} +
-            \cdots +
-            \binom{n}{\frac{n}{2}} -
-            \cdots -
-            \binom{n}{1} +
-            \binom{n}{0}                \\
-             & =                      &
-            2\binom{n}{0} -
-            2\binom{n}{1} +
-            \cdots -
-            2\binom{n}{\frac{n}{2}-1} +
-            \binom{n}{\frac{n}{2}}
+             & \igual{\red{!!}}[$\llamada1$] &
+            \ob{
+              \blue{
+                (-1)^0 \binom{n}{0} +
+                (-1)^n \binom{n}{n}
+              }
+            }{
+              2
+            }
+            +
+            \sumatoria{k = \red{1}}{\red{n - 1}} (-1)^k
+            \big[
+              \binom{n-1}{k-1} + \binom{n-1}{k}
+            \big]                                                 \\
+             & =                             &
+            2
+            \red{-} \big[\binom{n-1}{0} + \binom{n-1}{1}\big]
+            \red{+} \big[\binom{n-1}{1} + \binom{n-1}{2}\big]
+            \red{-} \big[\binom{n-1}{2} + \binom{n-1}{3}\big]
+            + \cdots
+            \red{+} \big[\binom{n-1}{n-3} + \binom{n-1}{n-2}\big]
+            \red{-} \big[\binom{n-1}{n-2} + \binom{n-1}{n-1}\big] \\
+             & \igual{\red{!!}}              &
+            2 \red{-} \binom{n-1}{0} \red{-} \binom{n-1}{n-1}     \\
+             & \igual{\red{!}}               &
+            0
           \end{array}
         $$
-
-        \red{Tengo que probar que eso me da cero... a ver si alguien por favor me saca de este quilombo}
-
-        \hacer
+        }
 
   \item
         Primero queremos probar que $\sumatoria{k = 0}{2n} \binom{2n}{k} = 4^n$. \\
@@ -318,7 +323,8 @@
           }
           \flecha{}
           \set{a,\tilde{a},b}
-          \hspace{0.75em}$ \par
+          \hspace{0.75em}$
+
         $
           \llave{l}{
             f(a) = 00 \\
@@ -350,7 +356,8 @@
           }
           \flecha{}
           \set{a,\tilde{a},\tilde{b}}
-          \hspace{0.75em}$ \par
+          \hspace{0.75em}$
+
         $
           \llave{l}{
             f(a) = 00 \\
@@ -382,60 +389,66 @@
           }
           \flecha{}
           \set{a,\tilde{a},b,\tilde{b}}
-          \hspace{0.75em}$ \par
+          \hspace{0.75em}$
 
-        \textit{Aclaración: } \par
+        \textit{Aclaración: }
+
         El uso de las tildes $\tilde{~}$ en las letras es simplemente para marcar diferencia porq en un conjunto no puede haber elementos repetidos. \\
         Ahora llamo $c = \tilde{a}$ y $d = \tilde{b}$ y miren lo que tengo:
-        \[
+        $$
           \set{\vacio,\set{a},\set{b},\set{c},\set{d},\set{a,b},\set{a,c},\set{a,d},\set{b,c},\set{b,d},\set{c,d},
             \set{a,b,c},\set{a,b,d},\set{a,c,d},\set{b,c,d},\set{a,b,c,d}}
-        \]
+        $$
         Esto precisamente son las partes de un conjunto de 4 elementos!, que corresponde con contar $2^4 = 2^{2n} = 4^n$. Despues de todo este choclo, recordemos que originalmente
         teniamos $n = 2$ elementos $a,b$, y con esta idea de la funcion contamos las partes de un conjunto de $2n$ elementos. \par\bigskip
-        Despues el enunciado nos pedia deducir que: $\binom{2n}{n} < 4^n$. \\
+        Despues el enunciado nos pedia deducir que: $\binom{2n}{n} < 4^n$.
+
         Este no tiene mucho misterio, expandimos el lado derecha con lo que probamos recientemente y nos queda:
-        \[
+        $$
           \binom{2n}{n} < \sumatoria{k = 0}{2n} \binom{2n}{k}
-        \]
-        \[
+        $$
+        $$
           \red{\binom{2n}{n}} < \binom{2n}{0} + \cdots + \red{\binom{2n}{n}} + \cdots \binom{2n}{2n}
-        \]
+        $$
         Bueno todos los terminos de la derecha son positivos asi que se ve claramente que lo que nos planteaba el enunciado es verdadero.
 
   \item
         Para calcular lo que nos piden no damos mucha vuelta, hacemos cambio de variable $m = 2n + 1$ y vemos que:
-        \[
-          \sumatoria{k=0}{2n + 1} \binom{2n+1}{k} \xrightarrow{m = 2n + 1} \sumatoria{k=0}{m} \binom{m}{k} = 2^m \xrightarrow{m = 2n + 1} 2^{2n + 1} = 2^{2n} \cdot 2 = \cajaResultado{4^n \cdot 2}
-        \] \\
-        Ya tenemos la primera parte del ejercicio, ahora nos piden \textit{deducir} $\sumatoria{k = 0}{n} \binom{2n + 1}{k}$. Para hacer este vamos a usar un poco de intuicion del triangulo de pascal:\\
-        \[
-          \begin{tabular}{c|ccccccccccc}
-            n=0 &                &                &                &                &                & $\binom{0}{0}$ &                &                &                &                &                \\
-                &                &                &                &                &                &                &                &                &                &                &                \\
-            n=1 &                &                &                &                & $\binom{1}{0}$ &                & $\binom{1}{1}$ &                &                &                &                \\
-                &                &                &                &                &                &                &                &                &                &                &                \\
-            n=2 &                &                &                & $\binom{2}{0}$ &                & $\binom{2}{1}$ &                & $\binom{2}{2}$ &                &                &                \\
-                &                &                &                &                &                &                &                &                &                &                &                \\
-            n=3 &                &                & $\binom{3}{0}$ &                & $\binom{3}{1}$ &                & $\binom{3}{2}$ &                & $\binom{3}{3}$ &                &                \\
-                &                &                &                &                &                &                &                &                &                &                &                \\
-            n=4 &                & $\binom{4}{0}$ &                & $\binom{4}{1}$ &                & $\binom{4}{2}$ &                & $\binom{4}{3}$ &                & $\binom{4}{4}$ &                \\
-                &                &                &                &                &                &                &                &                &                &                &                \\
-            n=5 & $\binom{5}{0}$ &                & $\binom{5}{1}$ &                & $\binom{5}{2}$ &                & $\binom{5}{3}$ &                & $\binom{5}{4}$ &                & $\binom{5}{5}$
-          \end{tabular}
-        \] \\
+        $$
+          \sumatoria{k=0}{2n + 1} \binom{2n+1}{k}
+          \flecha{m = 2n + 1}
+          \sumatoria{k=0}{m} \binom{m}{k} = 2^m
+          \flecha{m = 2n + 1}
+          2^{2n + 1} = 2^{2n} \cdot 2 = \cajaResultado{4^n \cdot 2}
+        $$
+        Ya tenemos la primera parte del ejercicio, ahora nos piden \textit{deducir} $\sumatoria{k = 0}{n} \binom{2n + 1}{k}$.
+        Para hacer este vamos a usar un poco de intuición del triangulo de pascal:
+        $$
+          \begin{array}{c|ccccccccccc}
+            \rowcolor{Cerulean!5}
+            n=0 &              &              &              &              &              & \binom{0}{0} &              &              &              &              &              \\
+            n=1 &              &              &              &              & \binom{1}{0} &              & \binom{1}{1} &              &              &              &              \\
+            \rowcolor{Cerulean!5}
+            n=2 &              &              &              & \binom{2}{0} &              & \binom{2}{1} &              & \binom{2}{2} &              &              &              \\
+            n=3 &              &              & \binom{3}{0} &              & \binom{3}{1} &              & \binom{3}{2} &              & \binom{3}{3} &              &              \\
+            \rowcolor{Cerulean!5}
+            n=4 &              & \binom{4}{0} &              & \binom{4}{1} &              & \binom{4}{2} &              & \binom{4}{3} &              & \binom{4}{4} &              \\
+            n=5 & \binom{5}{0} &              & \binom{5}{1} &              & \binom{5}{2} &              & \binom{5}{3} &              & \binom{5}{4} &              & \binom{5}{5}
+          \end{array}
+        $$
         Vemos que las filas con $n$ impares tienen una cantidad par de terminos, por ejemplo $n = 3$, tiene 4 terminos, esto se debe a que como el listado empieza
         en $0$. Como tienen una cantidad par de terminos, y sabemos que el triangulo de pascal es simétrico (por la identidad: $\binom{n}{k} = \binom{n}{n - k}$), con
         saber la mitad ya sabemos el resto (en el caso de los $n$ impares). Entonces vamos a usar esta idea, nos piden deducir $\sumatoria{k = 0}{n} \binom{2n + 1}{k}$, vemos
         que $2n + 1$ siempre va a ser un numero impar, asi que podemos aplicar esta idea de la simetria, la clave acá es que sumar hasta $n$ es sumar exactamente
         hasta la mitad de su respectiva fila en el triangulo de pascal. Por que? Tiene que ver con que el triangulo de pascal esta indexado en 0, pero mejor
         verlo graficamente, por ejemplo vean que en la fila 3 del triangulo de pascar, es como decir la fila $2m + 1,\, m=1$, y justamente en $m$ se parte al medio
-        la fila. \\
+        la fila.
+
         Bueno combinemos todas estas ideas y entonces para calcular $\sumatoria{k = 0}{n} \binom{2n + 1}{k}$ primero calculamos todos los elementos de la fila correspondiente
         al $2n + 1$ y luego dividimos por dos porque partimos al medio la fila. Entonces tenemos:
-        \[
+        $$
           \sumatoria{k = 0}{n} \binom{2n + 1}{k} = \frac{\sumatoria{k = 0}{2n + 1} \binom{2n + 1}{k}}{2} = \frac{4^n \cdot \cancel{2}}{\cancel{2}} = \cajaResultado{4^n}
-        \]
+        $$
 
 \end{enumerate}
 
