--- a/3-guia/ejercicios-3/ej-28-3.tex
+++ b/3-guia/ejercicios-3/ej-28-3.tex
@@ -452,8 +452,9 @@
 
 \end{enumerate}
 
-\begin{aportes}
+\begin{aportes}[4]
   \item \aporte{https://github.com/sigfripro}{sigfripro \github}
   \item \aporte{\dirRepo}{naD GarRaz \github}
   \item \aporte{https://github.com/APNieto/}{Ale Nieto \github}
+  \item \aporte{https://github.com/ivdou}{Ivan Doumerc \github}
 \end{aportes}
